--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Urbanatt Mobile</ion-title>
+    <ion-title>Inicio de Sesión</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -21,7 +21,7 @@
                 
             </ion-list>
            
-            <button ion-button (click)="iniciar(creds)" style="width: 300px;">
+            <button ion-button (click)="iniciar(creds)" style="width: 100%;">
                 Ingresar
               </button>
         <div>   
