--- a/src/pages/inicio/inicio.html
+++ b/src/pages/inicio/inicio.html
@@ -1,17 +1,23 @@
 <ion-header>
   <ion-navbar>
+    <button ion-button menuToggle icon-only>
+      <ion-icon name='menu'></ion-icon>
+    </button>
     <ion-title>
-      Inicio
+      Menu principal
     </ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content>
-  <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
-    <ion-item>
-      <ion-icon name="ionic" item-start></ion-icon>
-      @ionicframework
-    </ion-item>
-  </ion-list>
-</ion-content>
+
+	<ion-content>
+		<ion-list>
+			 <button ion-item menuClose (click)="openPage('clientes')" icon-start>
+          <ion-icon name='ios-person-add' style="zoom:1.5"></ion-icon>
+				Clientes
+			</button>
+			<button ion-item menuClose (click)="openPage('cerrarSesion')" icon-start>
+          <ion-icon name='ios-close-circle-outline'  style="zoom:1.0"></ion-icon> Cerrar sesión
+			</button>
+		</ion-list>
+	</ion-content>
