--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,6 +1,5 @@
 <ion-tabs>
-  <ion-tab [show]="mostrarLogin" [root]="tab1Root" tabTitle="Login" tabIcon="home"></ion-tab>
-  <ion-tab [show]="!mostrarLogin" [root]="inicioRoot" tabTitle="Inicio" tabIcon="home"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Inicio" tabIcon="home"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Acerca De" tabIcon="information-circle"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Contacto" tabIcon="contacts"></ion-tab>
 </ion-tabs>
