--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -9,18 +9,18 @@
 <ion-content padding>
     <ion-slides pager>
 
-        <ion-slide style="background-color: rgb(19, 05, 89)">
-          <h1 style="color:azure">Bienvenidos a "Nombre Aplicación"</h1>
+        <ion-slide style="background-color:#A0F739">
+          <h1 style="color:azure">Bienvenidos a Urbanatt</h1>
           <h4 style="color:azure">la mejor aplicación de todas</h4>
         </ion-slide>
       
-        <ion-slide style="background-color: rgb(19, 05, 89)">
-            <h1 style="color:azure">Que es "Nombre Aplicación"</h1>
+        <ion-slide style="background-color: #A0F739">
+            <h1 style="color:azure">Que es Urbanatt</h1>
             <h4 style="color:azure">aplicación móvil para volver rico a Harold cuando la venda a sus amigos</h4>
         </ion-slide>
       
-        <ion-slide style="background-color: rgb(19, 05, 89)">
-            <h1 style="color:azure">Tecnologías usadas "Nombre Aplicación"</h1>
+        <ion-slide style="background-color: #A0F739">
+            <h1 style="color:azure">Tecnologías usadas en Urbantt</h1>
             <h4 style="color:azure">1. Node Js</h4>
             <h4 style="color:azure">2. Ionic Framework</h4>
             <h4 style="color:azure">3. Cordova (el portero)</h4>
