--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,25 +1,25 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      About
+      Acerca De
     </ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content >
     <ion-slides pager>
 
-        <ion-slide class="fontTabs">
+        <ion-slide>
           <h1 class="styleLabels">Urbanatt mobile</h1>
           <h4 class="styleLabels">Software para el manejo de inventario/clientes/productos y facturación de la empresa Urbanatt</h4>
         </ion-slide>
       
-        <ion-slide class="fontTabs">
+        <ion-slide>
             <h1 class="styleLabels">Qué es Urbanatt</h1>
             <h4 class="styleLabels">Urbanatt es una empresa Colombiana dedicada a la comercialización y distribución de productos naturales con un estándar de alta calidad, contribuyendo al desarrollo pleno y sano de la población.</h4>
         </ion-slide>
       
-        <ion-slide class="fontTabs">
+        <ion-slide>
             <h1 class="styleLabels">Es aplicación esta desarrollada con</h1>
             <h4 class="styleLabels">1. Node Js</h4>
             <h4 class="styleLabels">2. Ionic Framework</h4>
