--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -8,6 +8,42 @@
 
 <ion-content >
     <ion-slides pager>
+      <ion-slide>
+        <ion-grid>
+          <ion-row>
+            <ion-col style="background: black">
+              <div>
+                1 of 4
+              </div>
+            </ion-col>
+            <ion-col style="border-block-end: floralwhite">
+              <div>
+                2 of 4
+              </div>
+            </ion-col>
+            <ion-col title="masdas">
+              <div>
+               <input type="text">
+              </div>
+            </ion-col>
+            <ion-col>
+              <div>
+                <button ion-button >Default</button>
+              </div>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+              
+            <ion-col style="background: magenta">
+            <div>valor incial</div>
+            </ion-col>
+             
+            <ion-col style="background: dodgerblue"></ion-col>
+            <ion-col style="background: firebrick"></ion-col>
+            <ion-col style="background: mediumvioletred"></ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-slide>
 
         <ion-slide>
           <h1>Urbanatt mobile</h1>
