--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,12 +1,27 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Contact
+      Contactenos
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
- 
-      
+    <ion-list [ngSwitch]="paso">
+        <ion-item *ngSwitchCase="1">
+          <ion-label fixed>Nombre:</ion-label>
+          <ion-input type="text" value="" placeholder="Nombre" required></ion-input>
+        </ion-item>
+        <ion-item *ngSwitchCase="2">
+          <ion-label fixed>Correo:</ion-label>
+          <ion-input type="email" value="" placeholder="Correo" required></ion-input>
+        </ion-item>
+        <ion-item *ngSwitchCase="3">
+            <ion-label fixed>Mensaje:</ion-label>
+            <ion-textarea type="email" value="" placeholder="Mensaje" required></ion-textarea>
+          </ion-item>
+    </ion-list>
+  <button  ion-button round (click)="siguiente()" style="width: 100%;">
+    {{mensaje}}
+  </button>    
 </ion-content>
