--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -9,16 +9,16 @@
 <ion-content>
     <ion-list [ngSwitch]="paso">
         <ion-item *ngSwitchCase="1">
-          <ion-label fixed>Nombre:</ion-label>
-          <ion-input type="text" value="" placeholder="Nombre" required></ion-input>
+          <ion-label floating>Nombre:</ion-label>
+          <ion-input type="text" value="" placeholder="Nombre"></ion-input>
         </ion-item>
         <ion-item *ngSwitchCase="2">
-          <ion-label fixed>Correo:</ion-label>
-          <ion-input type="email" value="" placeholder="Correo" required></ion-input>
+          <ion-label floating>Correo:</ion-label>
+          <ion-input type="email" value="" placeholder="Correo"></ion-input>
         </ion-item>
         <ion-item *ngSwitchCase="3">
-            <ion-label fixed>Mensaje:</ion-label>
-            <ion-textarea type="email" value="" placeholder="Mensaje" required></ion-textarea>
+            <ion-label floating>Mensaje:</ion-label>
+            <ion-textarea type="email" value="" style="width: auto"></ion-textarea>
           </ion-item>
     </ion-list>
   <button  ion-button round (click)="siguiente()" style="width: 100%;">
