--- a/src/pages/clientes/create/create.html
+++ b/src/pages/clientes/create/create.html
@@ -6,13 +6,13 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content>
+<ion-content >
   
   <ion-list>
       <ion-label style="text-align: center;font-size: 2rem;font-weight: 500">Información cliente</ion-label>
     <ion-item>
       <ion-label>Tipo identificación</ion-label>
-      <ion-select [(ngModel)]="cliente.tipo">
+      <ion-select [(ngModel)]="cliente.tipo" [disabled]="modoConsulta">
         <ion-option value="CC">Cédula ciudadania</ion-option>
         <ion-option value="CE">Cédula extrangeria</ion-option>
         <ion-option value="NIT">Nit</ion-option>
@@ -21,33 +21,33 @@
 
     <ion-item>
       <ion-label>Número identificación</ion-label>
-      <ion-input [(ngModel)]="cliente.numero" type="text"></ion-input>
+      <ion-input [(ngModel)]="cliente.numero" type="text" [disabled]="modoConsulta"></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label>Nombre completo</ion-label>
-      <ion-input [(ngModel)]="cliente.nombre" type="text"></ion-input>
+      <ion-input [(ngModel)]="cliente.nombre" type="text" [disabled]="modoConsulta"></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label>Teléfono</ion-label>
-      <ion-input [(ngModel)]="cliente.telefono" type="text"></ion-input>
+      <ion-input [(ngModel)]="cliente.telefono" type="text" [disabled]="modoConsulta"></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label>Dirección</ion-label>
-      <ion-input [(ngModel)]="cliente.direccion" type="text"></ion-input>
+      <ion-input [(ngModel)]="cliente.direccion" type="text" [disabled]="modoConsulta"></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label>Correo</ion-label>
-      <ion-input [(ngModel)]="cliente.correo" type="text"></ion-input>
+      <ion-input [(ngModel)]="cliente.correo" type="text" [disabled]="modoConsulta"></ion-input>
     </ion-item>
 
     <button ion-button round (click)="cancel()">
       Cancelar
     </button>
-    <button ion-button round (click)="acept()">
+    <button ion-button round (click)="acept()" [disabled]="modoConsulta">
       Aceptar
     </button>
 
