--- a/src/pages/clientes/clientes.html
+++ b/src/pages/clientes/clientes.html
@@ -42,7 +42,7 @@
               <ion-col class="estiloHeaderTabla">Tipo</ion-col>
               <ion-col class="estiloHeaderTabla">Número</ion-col>
               <ion-col class="estiloHeaderTabla">Nombres</ion-col>
-              <ion-col class="estiloHeaderTabla"> <button class="estiloIconosTabla" (click)="create()"> 
+              <ion-col class="estiloHeaderTabla"> <button  title="Crear"  class="estiloIconosTabla" (click)="create()"> 
                 <ion-icon name='ios-add-circle-outline' style="zoom:1.5"></ion-icon>
               </button>
               </ion-col>
@@ -55,15 +55,18 @@
                   <ion-col > {{ res.numero }}</ion-col>
                   <ion-col > {{ res.nombre }}</ion-col>
                   <ion-col > 
-                      <button class="estiloIconosTabla" (click)="details(res)">
+                      <button class="estiloIconosTabla" title="Ver detalles" (click)="details(res)">
                   <ion-icon name='ios-arrow-dropright' style="zoom:1.5"></ion-icon>
                       </button>
-                      <button class="estiloIconosTabla" (click)="edit(res)"> 
+                      <button class="estiloIconosTabla" title="Editar" (click)="edit(res)"> 
                   <ion-icon name='ios-create-outline' style="zoom:1.5"></ion-icon>
                 </button>
-                  <button  class="estiloIconosTabla" (click)="modalConfirm(res)" >
+                  <button  class="estiloIconosTabla" title="Eliminar" (click)="modalConfirm(res)" >
                   <ion-icon name='ios-cut-outline'  tyle="zoom:5.0"></ion-icon>
                 </button>
+                <button  class="estiloIconosTabla" title="Sucursales" (click)="sucursales(res)" >
+                    <ion-icon name='ios-home-outline'  tyle="zoom:5.0"></ion-icon>
+                  </button>
                 
                   </ion-col>
               
