--- a/src/pages/clientes/clientes.html
+++ b/src/pages/clientes/clientes.html
@@ -42,7 +42,8 @@
               <ion-col class="estiloHeaderTabla">Tipo</ion-col>
               <ion-col class="estiloHeaderTabla">Número</ion-col>
               <ion-col class="estiloHeaderTabla">Nombres</ion-col>
-              <ion-col class="estiloHeaderTabla"> <button  title="Crear"  class="estiloIconosTabla" (click)="create()"> 
+              <ion-col class="estiloHeaderTabla"> 
+                <button  title="Crear"  class="estiloIconosTabla" (click)="create()"> 
                 <ion-icon name='ios-add-circle-outline' style="zoom:1.5"></ion-icon>
               </button>
               </ion-col>
