--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -36,7 +36,7 @@
            </button>
               </ion-item>
               <ion-item>
-           <button class="estiloIconos"  (click)="openPage('clientes')">
+           <button class="estiloIconos"  (click)="openPage('productos')">
             <ion-icon name='md-archive' style="zoom:1.5"></ion-icon>
           Productos
         </button>
